install counter on

--- a/app/views/campaigns/christmas/index.html.haml
+++ b/app/views/campaigns/christmas/index.html.haml
@@ -193,6 +193,7 @@
       if (showEndSummary) {
         $(".figures").delay(2000).removeClass('hidden').hide().fadeIn('slow');
         //$.getScript("https://commondatastorage.googleapis.com/installs.youversion.com/map_data.js");
+        $.getScript("https://commondatastorage.googleapis.com/installs.youversion.com/stats_jsonp.js");
       } else {
         $.getScript("https://commondatastorage.googleapis.com/installs.youversion.com/christmas_chapter_calls_jsonp.js");
         $.getScript("https://commondatastorage.googleapis.com/installs.youversion.com/stats_jsonp.js");
