--- a/app/views/shared/_js_templates.html.haml
+++ b/app/views/shared/_js_templates.html.haml
@@ -115,7 +115,7 @@
             <input type="hidden" name="share[link]" id="share_link" value="" />
 
             <div class="share_message">
-              <textarea name="share[message]"></textarea>
+              <textarea name="share[body]"></textarea>
               <span>
                 <b id="short_link"></b>
                 #{t("link will be added")}
