--- a/app/assets/stylesheets/_plans.sass
+++ b/app/assets/stylesheets/_plans.sass
@@ -224,3 +224,9 @@
     p
       margin: -7px 0 0
 
+// Plan sample day
+.sample_devotional
+  background-color: white
+  border-radius: 5px
+  padding: 20px
+
