--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -107,10 +107,14 @@
       margin: 10px 0
       padding-left: 30px
 
-
-    li a
-      font-weight: bold
-      color: $green
+    li h2
+      margin-bottom: 0
+      -webkit-font-smoothing: antialiased
+      line-height: 1
+      a
+        font-weight: bold
+        font-size: 13px
+        color: $green
 
   .left_column
     float: left
@@ -452,7 +456,7 @@ article#plan-index
 
   input[type="submit"].action_button_green,
   input[type="submit"].action_button_grey,
-  input[type="submit"].action_button_red,
+  input[type="submit"].action_button_red
     width: 100%
 
   .action_button_red.confirm
