fix rp detail meta's title, fix sample pg for plans w/o deco content, add publisher to right col of sample detail

--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -452,7 +452,7 @@ article#plan-index
 
   input[type="submit"].action_button_green,
   input[type="submit"].action_button_grey,
-  input[type="submit"].action_button_red,
+  input[type="submit"].action_button_red
     width: 100%
 
   .action_button_red.confirm
