--- a/app/views/sidebars/plans/_sample.html.haml
+++ b/app/views/sidebars/plans/_sample.html.haml
@@ -75,4 +75,13 @@
   #widget-devotional.widget
     %h3.hd= t("plans.devotional")
     %div.bd= reading.devotional.html_safe
+- else
+.widget
+  %h3.hd
+    =t("plans.publisher")
+  %div.bd
+    %p= plan.copyright.html_safe
+  - unless plan.publisher_url.nil?
+    %div.ft.link
+      = link_to(t("plans.about publisher"), plan.publisher_url)
 
