--- a/app/views/widgets/_my_plans.html.haml
+++ b/app/views/widgets/_my_plans.html.haml
@@ -15,7 +15,7 @@
           %li
             %h3= sub.name
             %p
-              = link_to(t("plans.widget.start reading"), subscription_path(user_id: current_user, id: sub))\
+              = link_to(t("plans.widget.start reading"), subscription_path(user_id: current_user, id: sub))
               %span= t("plans.current progress html", day: sub.current_day, total_days: sub.total_days).html_safe
     .ft
       = link_to(t("plans.widget.view my plans"), subscriptions_path(user_id: current_user))
