update i18n strings per Lisa's request

--- a/app/assets/stylesheets/mobile/_pages.sass
+++ b/app/assets/stylesheets/mobile/_pages.sass
@@ -133,6 +133,7 @@
     text-shadow: 0px 1px 0px rgba(0,0,0,.2)
     color: #fff
     float: left
+    line-height: 1.1
 
   a.cta span
     text-shadow: 0px 1px 0px rgba(0,0,0,.2)
@@ -452,7 +453,7 @@ article#plan-index
 
   input[type="submit"].action_button_green,
   input[type="submit"].action_button_grey,
-  input[type="submit"].action_button_red,
+  input[type="submit"].action_button_red
     width: 100%
 
   .action_button_red.confirm
