--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -48,9 +48,7 @@
       %li#dl_amazon= link_to t('mobile page.amazon'), "http://www.amazon.com/YouVersion-Bible/dp/B004MC8CA2"
     %a.cta
       %h4
-        = t('mobile page.button h4')
-      %span
-        = t('mobile page.button h4 sub')
+        = t('mobile page.button h4').html_safe
   %div.clear
   %section.testimonials
     %h2= t('mobile page.what people')
