tahoma as default font for farsi locale

--- a/app/assets/stylesheets/_vars.sass
+++ b/app/assets/stylesheets/_vars.sass
@@ -2,6 +2,7 @@
 $experimental-support-for-svg: true
 
 $body_font: 'Helvetica Neue', Arial, 'Liberation Sans', FreeSans, sans-serif
+$fa_body_font: Tahoma, 'Helvetica Neue', Arial, 'Liberation Sans', FreeSans, sans-serif
 $text_size: 14px
 
 $gray_dark_1: #1e1e1f
