--- a/app/assets/stylesheets/mobile/_text.sass
+++ b/app/assets/stylesheets/mobile/_text.sass
@@ -6,6 +6,10 @@
 body
   font: 15px/1.8 $body_font
 
+html[data-locale="fa"] body
+  font: 14px/1.8 $fa_body_font
+
+
 // !Headings
 //----------------------------------------------------------------------------------------------------
 
