--- a/app/assets/stylesheets/_text.sass
+++ b/app/assets/stylesheets/_text.sass
@@ -5,6 +5,9 @@ body
   -webkit-font-smoothing: antialiased
   font: 14px/1.8 $body_font
 
+html[data-locale="fa"] body
+  font: 14px/1.8 $fa_body_font
+
 pre,
 code
   font-family: 'DejaVu Sans Mono', Monaco, Consolas, monospace
