Mobile devotional etc

--- a/app/assets/stylesheets/mobile/_global_html.sass
+++ b/app/assets/stylesheets/mobile/_global_html.sass
@@ -98,6 +98,7 @@ form.full_page_form label
 
 #container
   padding: 0px
+  z-index: 500
 
 body
   min-width: 0px
@@ -111,4 +112,4 @@ body
 header nav.sign_in,
 #logo,
 .hide-mobile
-  display: none !important
+  display: none
