--- a/app/views/plans/sample.html.haml
+++ b/app/views/plans/sample.html.haml
@@ -23,6 +23,8 @@
       %h1= t('plans.no verses')
       %p= t('plans.no content')
 - else
+  - content_for :sidebar_class do
+    = "open no_auth"
   .sample_devotional
     %h1
       = "#{@plan.title} : #{t('plans.day number', day: @presenter.day)}"
