change approach for rp sample detail pg, add canonicals for rp title and detail pages

--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -12,10 +12,6 @@
   width: 150px
   height: 50px
 
-.mobile-client
-  #logo
-    display: none !important
-
 
 // !Header
 //----------------------------------------------------------------------------------------------------
@@ -36,7 +32,7 @@
   top: 0
   background-color: #dedddb
   padding: 0
-  z-index: 10000
+  z-index: 901
   position: fixed
   height: 47px
   width: 100%
@@ -112,9 +108,6 @@
 #header .close_btn
   background: image-url("mobile/close_btn.png") 12px 8px no-repeat
 
-.no_auth
-  .close_btn
-    display: none
 
 .reader_modal_header .close_btn,
 #header .back_btn
@@ -179,7 +172,7 @@
   line-height: 18px
   float: left
 
-#header .settings_btn,
+#header .settings_btn
   background: #444 image-url("mobile/setting_btn.png") 0px 0px no-repeat
   margin: 8px 0 0 0
   height: 13px
