--- a/app/assets/stylesheets/mobile/_plans.sass
+++ b/app/assets/stylesheets/mobile/_plans.sass
@@ -35,7 +35,7 @@
       display: block
 
     .search_thumbnail,
-    .subscription-title,
+    .subscription-title
       float: left
       box-sizing: border-box
 
@@ -231,3 +231,21 @@
 
     p
       margin: -7px 0 10px
+
+// Plan sample day
+.sample_devotional
+  background-color: white
+  border-radius: 5px
+  padding: 20px 20px 50px 20px
+
+  .video-container
+    width: 300px
+
+  .rp-subscription-info
+    margin-bottom: 20px
+
+  .action_button_dark_grey
+    display: none
+
+  .scripture-links
+    margin: 20px 0
