--- a/app/assets/stylesheets/mobile/_global_html.sass
+++ b/app/assets/stylesheets/mobile/_global_html.sass
@@ -98,7 +98,6 @@ form.full_page_form label
 
 #container
   padding: 0px
-  z-index: 500
 
 body
   min-width: 0px
@@ -112,4 +111,4 @@ body
 header nav.sign_in,
 #logo,
 .hide-mobile
-  display: none
+  display: none !important
