--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -6,6 +6,9 @@
   = "#{t('plans.title')}: #{truncate(strip_tags(@plan.about).html_safe, length: 138, separator: " ", omission: '')}.."
 
 - content_for :additional_meta do
+  - locale_dir = I18n.locale.to_s.eql?("en") ? '' : '/' + I18n.locale.to_s
+  - canonicalHref = "https://#{request.host_with_port}#{locale_dir}#{request.fullpath}"
+  %link{rel: "canonical", href: canonicalHref}
 
   %meta{property: "og:title",       content: @title }
   %meta{property: "og:url",         content: @meta_url}
