--- a/app/views/shared/_book_selector.html.haml
+++ b/app/views/shared/_book_selector.html.haml
@@ -6,6 +6,7 @@
 
 - cache "#{presenter.version.id}_#{I18n.locale.to_s}_#{presenter.reference.book}", :expires_in => YV::Caching.a_long_time do
   - current_book_chapters = nil
+  - current_book = nil
   - ref_str = presenter.reference_string
   - chapter, version = "1", ref_str.version
   - version_id = presenter.version.id
@@ -42,6 +43,7 @@
                 %a{href: url, "data-book" => book_usfm.downcase}
                   = truncate(book_info.human, length: 40, separator: " ")
                 - current_book_chapters = book_info.chapters if presenter.reference.book.downcase.eql?(book)
+                - current_book = book_info.human if presenter.reference.book.downcase.eql?(book)
       #menu_chapter
         %header
           =t("chapter")
@@ -51,7 +53,7 @@
             -unless current_book_chapters.nil?
               - current_book_chapters.each do |chapter_info|
                 - canonical = chapter_info.canonical
-                - chapter_name = chapter_info.human
+                - chapter_name = "#{current_book} #{chapter_info.human}"
                 - chapter_usfm = chapter_info.usfm.downcase
                 - link_body = canonical ? chapter_name : "i"
                 -#js will add active class - we don't here because this is cached per book
